--- a/public_html/css/professionalServices.css
+++ b/public_html/css/professionalServices.css
@@ -7,7 +7,7 @@ CSS for professional services page
 */
 #content {
     font-family: "Gotham A","Gotham B","Helvetica",sans-serif;
-    height: 177em;
+    height: 162em;
 }
 
 #ps_head {
@@ -81,18 +81,18 @@ CSS for professional services page
 }
 
 #ps_section_1 {
-    height: 42em;
+    height: 37em;
     margin-top: 3.5em;
 }
 
 #ps_section_2 {
-    height: 31em;
+    height: 28em;
     padding-top: 2.5em;
     background: #F7F7F7;
 }
 
 #ps_section_3 {
-    height: 36em;
+    height: 32em;
     padding-top: 2.5em;
 }
 
@@ -150,19 +150,19 @@ CSS for professional services page
 }
 
 #ps_subsection_info_12 {
-    margin-top: 9em;
+    margin-top: 7em;
 }
 
 #ps_subsection_info_13 {
-    margin-top: 16em;
+    margin-top: 13em;
 }
 
 #ps_subsection_info_14 {
-    margin-top: 24em;
+    margin-top: 19em;
 }
 
 #ps_subsection_info_15 {
-    margin-top: 26em;
+    margin-top: 22em;
 }
 
 #ps_subsection_info_21 {
@@ -170,15 +170,15 @@ CSS for professional services page
 }
 
 #ps_subsection_info_22 {
-    margin-top: 5em;
+    margin-top: 4em;
 }
 
 #ps_subsection_info_23 {
-    margin-top: 11em;
+    margin-top: 9em;
 }
 
 #ps_subsection_info_24 {
-    margin-top: 17em;
+    margin-top: 13em;
 }
 
 #ps_subsection_info_31 {
@@ -190,11 +190,11 @@ CSS for professional services page
 }
 
 #ps_subsection_info_33 {
-    margin-top: 15em;
+    margin-top: 12em;
 }
 
 #ps_subsection_info_34 {
-    margin-top: 22em;
+    margin-top: 18em;
 }
 
 #ps_subsection_info_41 {
