--- a/public_html/css/wood.css
+++ b/public_html/css/wood.css
@@ -7,7 +7,7 @@ CSS for wood file
 */
 #content {
     font-family: "Gotham A","Gotham B","Helvetica",sans-serif;
-    height: 73em;
+    height: 67em;
 }
 
 #wood_head {
@@ -110,11 +110,11 @@ CSS for wood file
 }
 
 #wood_subsection_info_12 {
-    margin-top: 9em;
+    margin-top: 7em;
 }
 
 #wood_subsection_info_13 {
-    margin-top: 26em;
+    margin-top: 20em;
 }
 
 /* ==========================================================================
